--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
       </section>
       <footer class="footer">
-        <a href="tbceducation.ge"
+        <a href="https://tbceducation.ge" target="_blank"
           ><img src="img/tbc-logo.png" alt="TBC Logo"
         /></a>
       </footer>
