--- a/pages/About-me.html
+++ b/pages/About-me.html
@@ -101,7 +101,15 @@
               </div>
               <div class="timeline-item learning">
                 <div class="dot"></div>
-                <h3>React.js</h3>
+                <h3>TypeScript</h3>
+                <p>
+                  Strongly typed JavaScript, catching errors before runtime.
+                </p>
+                <span class="status">Learning</span>
+              </div>
+              <div class="timeline-item learning">
+                <div class="dot"></div>
+                <h3>React</h3>
                 <p>
                   Components, state, props, and hooks — building reusable UI
                   patterns.
