--- a/pages/Certificate.html
+++ b/pages/Certificate.html
@@ -33,98 +33,137 @@
       <section class="about-header">
         <h1>My Certificates</h1>
         <p>
-          Here are some of the certificates I have earned. Each demonstrates my dedication to learning and professional growth.
+          Here are some of the certificates I have earned. Each demonstrates my
+          dedication to learning and professional growth.
         </p>
       </section>
       <section class="certificates-grid">
-        <!-- Certificate Card Example -->
         <div class="certificate-card">
           <img
-            src="img/certificate1.png"
-            alt="Certificate 1"
-            class="certificate-img"
-          />
-          <div class="certificate-content">
-            <h2 class="certificate-title">Front-End Development</h2>
-            <p class="certificate-desc">
-              Successfully completed the Front-End Development course, mastering HTML, CSS, JavaScript, and React.
-            </p>
-            <div class="certificate-meta">
-              <span><i class="fas fa-university"></i> Coursera</span>
-              <span><i class="fas fa-calendar-alt"></i> June 2024</span>
-            </div>
-            <div class="certificate-links">
-              <a
-                href="https://www.coursera.org/account/accomplishments/certificate/XXXX"
-                class="certificate-btn"
-                target="_blank"
-                rel="noopener"
-              >
-                <i class="fas fa-arrow-up-right-from-square"></i> View Certificate
-              </a>
-            </div>
-          </div>
-        </div>
-        <!-- Repeat .certificate-card for more certificates -->
-        <div class="certificate-card">
-          <img
-            src="img/certificate2.png"
+            src="../img/backend.jpg"
             alt="Certificate 2"
             class="certificate-img"
           />
           <div class="certificate-content">
-            <h2 class="certificate-title">Back-End Development</h2>
+            <h2 class="certificate-title">Back-End Development (Phyton)</h2>
             <p class="certificate-desc">
-              Completed Back-End Development program, focused on Node.js, Express, databases, and RESTful APIs.
+              Completed Back-End Development program, focused on Python, Django,
+              Jinja and Sqlite .
             </p>
             <div class="certificate-meta">
-              <span><i class="fas fa-university"></i> Udemy</span>
-              <span><i class="fas fa-calendar-alt"></i> March 2024</span>
+              <span
+                ><i class="fas fa-university"></i> TBC TechSchool & Geolab</span
+              >
+              <span><i class="fas fa-calendar-alt"></i> March 2025</span>
             </div>
             <div class="certificate-links">
               <a
-                href="https://www.udemy.com/certificate/XXXX/"
+                href="https://drive.google.com/file/d/1ta95AkjL-DRUGtegrinIvJFln8PyUwGq/view?usp=sharing"
                 class="certificate-btn"
                 target="_blank"
                 rel="noopener"
               >
-                <i class="fas fa-arrow-up-right-from-square"></i> View Certificate
+                <i class="fas fa-arrow-up-right-from-square"></i> View
+                Certificate
               </a>
             </div>
           </div>
         </div>
         <div class="certificate-card">
           <img
-            src="img/certificate3.png"
+            src="../img/freecodecamp.png"
             alt="Certificate 3"
             class="certificate-img"
           />
           <div class="certificate-content">
-            <h2 class="certificate-title">Python Specialization</h2>
+            <h2 class="certificate-title">Html & Css (Responsive)</h2>
             <p class="certificate-desc">
-              Python for Everybody Specialization, covering core Python, data structures, and web data access.
+              Completed the Responsive Web Design course, mastering HTML and CSS
+              techniques for creating responsive layouts.
             </p>
             <div class="certificate-meta">
-              <span><i class="fas fa-university"></i> Coursera</span>
-              <span><i class="fas fa-calendar-alt"></i> December 2023</span>
+              <span><i class="fas fa-university"></i> FreeCodeCamp</span>
+              <span><i class="fas fa-calendar-alt"></i> January 2025</span>
             </div>
             <div class="certificate-links">
               <a
-                href="https://www.coursera.org/account/accomplishments/certificate/YYYY"
+                href="https://www.freecodecamp.org/certification/esmira2009/responsive-web-design"
                 class="certificate-btn"
                 target="_blank"
                 rel="noopener"
               >
-                <i class="fas fa-arrow-up-right-from-square"></i> View Certificate
+                <i class="fas fa-arrow-up-right-from-square"></i> View
+                Certificate
               </a>
             </div>
           </div>
         </div>
-        <!-- Add more .certificate-card as needed -->
+        <div class="certificate-card">
+          <img
+            src="../img/frontend.jpg"
+            alt="Certificate 1"
+            class="certificate-img"
+          />
+          <div class="certificate-content">
+            <h2 class="certificate-title">
+              Front-End Development (HTML & CSS)
+            </h2>
+            <p class="certificate-desc">
+              Successfully completed the Front-End Development course, mastering
+              HTML, CSS.
+            </p>
+            <div class="certificate-meta">
+              <span
+                ><i class="fas fa-university"></i> TBC TechSchool & Geolab</span
+              >
+              <span><i class="fas fa-calendar-alt"></i> June 2024</span>
+            </div>
+            <div class="certificate-links">
+              <a
+                href="https://drive.google.com/file/d/1aB-UHoH_RQE9JYC2kz0A3Um0qJfLJoR9/view?usp=sharing"
+                class="certificate-btn"
+                target="_blank"
+                rel="noopener"
+              >
+                <i class="fas fa-arrow-up-right-from-square"></i> View
+                Certificate
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="certificate-card">
+          <img
+            src="../img/sololearn-cerificate.png"
+            alt="Certificate 3"
+            class="certificate-img"
+          />
+          <div class="certificate-content">
+            <h2 class="certificate-title">Html</h2>
+            <p class="certificate-desc">
+              Completed the HTML course, mastering the fundamentals of HTML
+              structure and semantics.
+            </p>
+            <div class="certificate-meta">
+              <span><i class="fas fa-university"></i> SoloLearn</span>
+              <span><i class="fas fa-calendar-alt"></i> June 2022</span>
+            </div>
+            <div class="certificate-links">
+              <a
+                href="https://www.sololearn.com/certificates/CT-Z2I8BWDT"
+                class="certificate-btn"
+                target="_blank"
+                rel="noopener"
+              >
+                <i class="fas fa-arrow-up-right-from-square"></i> View
+                Certificate
+              </a>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <img src="../img/tbc-logo.png" alt="Portfolio Footer Logo" />
+      <a href="https://tbceducation.ge" target="_blank"><img src="../img/tbc-logo.png" alt="Portfolio Footer Logo" /></a>
     </footer>
     <script>
       // Simple burger menu script
