--- a/pages/Contact.html
+++ b/pages/Contact.html
@@ -60,7 +60,7 @@
         </div>
       </section>
       <footer class="footer">
-        <img src="../img/tbc-logo.png" alt="TBC Logo" />
+        <a href="https://tbceducation.ge" target="_blank"><img src="../img/tbc-logo.png" alt="TBC Logo" /></a>
       </footer>
     </main>
     <script>
