--- a/pages/Projects.html
+++ b/pages/Projects.html
@@ -49,17 +49,20 @@
           <div class="project-content">
             <h2 class="project-title">CogniPeak</h2>
             <p class="project-desc">
-              A learning web page, where students can watch tutorials, 
+              A learning web-site, where students can watch tutorials, take
+              quizzes, and track their progress. The platform supports multiple
+              subjects and students can improve their skills through interactive
+              content.
             </p>
             <div class="project-langs">
               <span>HTML</span>
               <span>CSS</span>
               <span>JavaScript</span>
-              <span>OpenWeather API</span>
+              <span>Python</span>
             </div>
             <div class="project-links">
               <a
-                href="https://github.com/user/weather-app"
+                href="https://github.com/EsmoAghamedova/final-project-python"
                 class="project-btn"
                 target="_blank"
                 rel="noopener"
@@ -67,7 +70,7 @@
                 <i class="fab fa-github"></i> GitHub
               </a>
               <a
-                href="https://weather-app-demo.com"
+                href="https://cognipeak.onrender.com"
                 class="project-btn"
                 target="_blank"
                 rel="noopener"
@@ -78,28 +81,27 @@
             </div>
           </div>
         </div>
-        <!-- Repeat .project-card for more projects -->
         <div class="project-card">
           <img
-            src="img/project2.png"
+            src="../img/to-do-list.png"
             alt="Project 2 Screenshot"
             class="project-img"
           />
           <div class="project-content">
-            <h2 class="project-title">Task Manager</h2>
+            <h2 class="project-title">To Do List</h2>
             <p class="project-desc">
-              A productivity tool to manage tasks and deadlines. Includes user
-              authentication, task sorting, and reminders.
+              A simple to-do list application that allows users to add, edit,
+              and delete tasks. Tasks can be marked as completed, and the app
+              saves the state in local storage for persistence.
             </p>
             <div class="project-langs">
-              <span>React</span>
-              <span>Node.js</span>
-              <span>MongoDB</span>
-              <span>Express</span>
+              <span>HTML</span>
+              <span>CSS</span>
+              <span>JavaScript</span>
             </div>
             <div class="project-links">
               <a
-                href="https://github.com/user/task-manager"
+                href="https://github.com/EsmoAghamedova/to-do-list-app"
                 class="project-btn"
                 target="_blank"
                 rel="noopener"
@@ -107,7 +109,7 @@
                 <i class="fab fa-github"></i> GitHub
               </a>
               <a
-                href="https://task-manager-demo.com"
+                href="https://esmoaghamedova.github.io/to-do-list-app"
                 class="project-btn"
                 target="_blank"
                 rel="noopener"
@@ -120,24 +122,27 @@
         </div>
         <div class="project-card">
           <img
-            src="img/project3.png"
+            src="../img/mini-shopping-web-page.png"
             alt="Project 3 Screenshot"
             class="project-img"
           />
           <div class="project-content">
-            <h2 class="project-title">Portfolio Website</h2>
+            <h2 class="project-title">Mini Shopping Web Page</h2>
             <p class="project-desc">
-              Personal website to showcase my projects, skills, and contact
-              information. Clean design and fully responsive.
+              A mini shopping web page that showcases functionalities like
+              product listing, adding items to a cart, sum calculation, and
+              light/dark mode toggle. The page is designed to be responsive and
+              user-friendly.
             </p>
             <div class="project-langs">
               <span>HTML</span>
               <span>CSS</span>
-              <span>JavaScript</span>
+              <span>TypeScript</span>
+              <span>React</span>
             </div>
             <div class="project-links">
               <a
-                href="https://github.com/user/portfolio"
+                href="https://github.com/EsmoAghamedova/mini-shopping-web-page"
                 class="project-btn"
                 target="_blank"
                 rel="noopener"
@@ -145,7 +150,7 @@
                 <i class="fab fa-github"></i> GitHub
               </a>
               <a
-                href="https://my-portfolio-demo.com"
+                href="https://mini-shopping-web-page.vercel.app"
                 class="project-btn"
                 target="_blank"
                 rel="noopener"
@@ -156,14 +161,53 @@
             </div>
           </div>
         </div>
-        <!-- Add more .project-card as needed -->
+        <div class="project-card">
+          <img
+            src="../img/hbd.png"
+            alt="Project 3 Screenshot"
+            class="project-img"
+          />
+          <div class="project-content">
+            <h2 class="project-title">BirthDay Gift 🌸</h2>
+            <p class="project-desc">
+              A birthday gift web page designed to celebrate a special occasion.
+              The page includes a personalized message, images, and a festive
+              design. It’s a simple yet heartfelt way to express birthday wishes.
+              also you can take pics/videos or play truth or dare game.
+            </p>
+            <div class="project-langs">
+              <span>HTML</span>
+              <span>CSS</span>
+              <span>JavaScript</span>
+            </div>
+            <div class="project-links">
+              <a
+                href="https://github.com/EsmoAghamedova/HBD"
+                class="project-btn"
+                target="_blank"
+                rel="noopener"
+              >
+                <i class="fab fa-github"></i> GitHub
+              </a>
+              <a
+                href="https://hbd-nine-drab.vercel.app"
+                class="project-btn"
+                target="_blank"
+                rel="noopener"
+              >
+                <span>Live Demo</span>
+                <i class="fas fa-arrow-up-right-from-square"></i>
+              </a>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <img src="../img/tbc-logo.png" alt="Portfolio Footer Logo" />
+      <a href="https://tbceducation.ge" target="_blank"><img src="../img/tbc-logo.png" alt="Portfolio Footer Logo" /></a>
     </footer>
     <script>
-      // Simple burger menu script
+      
       document
         .querySelector(".burger-menu")
         .addEventListener("click", function () {
