movrchi vsoooo damtavrda 🥲🥹

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" href="./img/logo.png" type="image/x-icon" />
     <link rel="stylesheet" href="styles/reset.css" />
     <link rel="stylesheet" href="styles/Home.css" />
-    <title>Portfolio - Esmira Aghamedova</title>
+    <title>Portfolio | Esmira Aghamedova</title>
   </head>
   <body>
     <main class="main-container">
