--- a/pages/About-me.html
+++ b/pages/About-me.html
@@ -6,6 +6,7 @@
     <title>About Me | Esmira Aghamedova</title>
     <link rel="stylesheet" href="../styles/reset.css" />
     <link rel="stylesheet" href="../styles/About-me.css" />
+    <link rel="shortcut icon" href="./img/logo.png" type="image/x-icon" />
   </head>
   <body>
     <header class="header">
