--- a/pages/Contact.html
+++ b/pages/Contact.html
@@ -6,7 +6,8 @@
     <link rel="shortcut icon" href="../img/logo.png" type="image/x-icon" />
     <link rel="stylesheet" href="../styles/reset.css" />
     <link rel="stylesheet" href="../styles/Contact.css" />
-    <title>Contact me - Esmira Aghamedova</title>
+    <link rel="shortcut icon" href="./img/logo.png" type="image/x-icon" />
+    <title>Contact me | Esmira Aghamedova</title>
   </head>
   <body>
     <main class="main-container">
