--- a/pages/Projects.html
+++ b/pages/Projects.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Projects</title>
+    <title>Projects | Esmira Aghamedova</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="../styles/reset.css" />
     <link rel="stylesheet" href="../styles/Projects.css" />
-    <!-- Example icons: using Font Awesome CDN for row/external icons -->
+    <link rel="shortcut icon" href="./img/logo.png" type="image/x-icon" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
